<resources>
    <string name="app_name">GoMovie</string>
    <string name="search">Search</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="about_gomovie">About GoMovie</string>
    <string name="about_developer">About Developer</string>
    <string name="gomovie_1_0_0">GoMovie 1.0.0</string>
    <string name="ig_auliasyhrn">IG : @auliasyhrn__</string>
    <string name="ig_ureladl">IG : @aureladl</string>
    <string name="ig_lesafitriani">IG : @lesaftrani_</string>
    <string name="text_gomovie_about"> Gomovie adalah layanan dalam menyediakan daftar film yang sedang popular. Disini juga anda bisa menyimpan, mencari info, melihat riwayat serta, mencari judul film yang anda inginkan pada aplikasi ini. </string>
    <string name="about_developers">About Developers</string>
    <string name="aulia_syahrani">Aulia Syahrani</string>
    <string name="aurel_adelia">Aurel Adelia</string>
    <string name="lesa_fitriani">Lesa Fitriani</string>
    <string name="action_setting">Setting</string>
    <string name="setting">Setting</string>
    <string name="alarm_on_toast">Stand Up Alarm On!</string>
    <string name="alarm_off_toast">Stand Up Alarm Off!</string>
    <string name="notification_title">Stand Up Alert</string>
    <string name="notification_text">You should stand up and walk around now!</string>
    <string name="alarm_off">Alarm off</string>
    <string name="alarm_on">Alarm on</string>

</resources>