<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textView"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="142dp"
        android:text="@string/about_gomovie"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="60dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="295dp"
        android:layout_height="214dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="58dp"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="331dp"
        android:layout_height="99dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="329dp"
        android:layout_marginEnd="38dp"
        android:text="@string/text_gomovie_about"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="458dp"
        android:layout_marginEnd="134dp"
        android:text="@string/about_developer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="60dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="307dp"
        android:text="@string/gomovie_1_0_0"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="99dp"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="142dp"
        tools:srcCompat="@drawable/aulia" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="99dp"
        android:layout_height="93dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="143dp"
        android:layout_toEndOf="@+id/imageView2"
        tools:srcCompat="@drawable/aurel" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="99dp"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="287dp"
        android:layout_marginBottom="142dp"
        tools:srcCompat="@drawable/lesa" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="113dp"
        android:text="@string/aulia_syahrani" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="171dp"
        android:layout_marginBottom="113dp"
        android:text="@string/aurel_adelia" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="301dp"
        android:layout_marginBottom="115dp"
        android:text="@string/lesa_fitriani" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="99dp"
        android:text="@string/ig_auliasyhrn"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="179dp"
        android:layout_marginBottom="100dp"
        android:text="@string/ig_ureladl"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="299dp"
        android:layout_marginBottom="102dp"
        android:text="@string/ig_lesafitriani"
        android:textSize="11sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/menu_bawah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#EAE9EC"
            android:foregroundGravity="bottom"
            app:menu="@menu/menu_bawah" />
    </FrameLayout>


</RelativeLayout>